<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:id="@+id/book_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/book_title"
        android:textColor="@color/title_textColor"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/book_authors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/book_author"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/book_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="2"
        android:text="@string/book_description" />

</LinearLayout>